--- a/index.html
+++ b/index.html
@@ -6,18 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Trivia Game</title>
 </head>
 
 <body>
+    <div id="container">
+        <header>
+            <H1>
+                Totally Trivial Trivia!
+            </H1>
+            <div id="btnDiv">
+                <button id="btnStart">Start</button>
+            </div>  
+            <div id="dynamicDiv">
+
+            </div>
+        </header>
+    </div>
 
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+<!-- <script src="assets/js/script.js"></script> -->
     <script src="assets/js/app.js"></script>
 </body>
 
