--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Trivia Game</title>
